tests/samples/negative/resources/move_borrow_name_alias_after_move.ax
module move_borrow_name_alias_after_move;

fn consume[T](value: T) -> void {
}

fn inspect[T](value: &T) -> void {
}

fn duplicate[T](value: T) -> void {
    let first: &T = &value;
    let second: &T = first;
    consume(value);
    inspect(second);
}

fn main() -> i32 {
    return 0;
}
